feat: update footer component with new styles, structure, and dynamic content; add heart-paw image

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -2,7 +2,12 @@
 <header class="sticky-header">
   <div class="header-container container">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo" />
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/616/616408.png"
+        alt="Veterinario icono"
+        width="48"
+        height="48"
+      />
       <h1>Clínica Veterinaria Santa Anita</h1>
     </div>
 
