--- a/src/app/pages/index/index-page.component.html
+++ b/src/app/pages/index/index-page.component.html
@@ -118,8 +118,9 @@
       </div>
       <div class="about-image">
         <img
-          src="assets/veterinaria.jpg"
-          alt="Clínica Veterinaria Santa Anita"
+          src="/assets/heart-paw.png"
+          alt="Corazón con huella veterinaria"
+          style="max-width: 100%; height: auto"
         />
       </div>
     </div>
