--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,47 +1,74 @@
-<!-- Footer -->
-<footer>
+<footer class="footer">
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
-        <h4>Clínica Veterinaria Santa Anita</h4>
-        <p>
+        <h4 class="footer-heading">Clínica Veterinaria Santa Anita</h4>
+        <p class="footer-description">
           Sistema informático para la atención veterinaria integral y eficiente.
         </p>
+        <div class="footer-logo">
+          <img
+            src="https://cdn-icons-png.flaticon.com/512/616/616408.png"
+            alt="Veterinario icono"
+            width="48"
+            height="48"
+          />
+        </div>
       </div>
+
       <div class="footer-col">
-        <h4>Enlaces Rápidos</h4>
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#caracteristicas">Características</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-      </div>
-      <div class="footer-col">
-        <h4>Contacto</h4>
-        <ul>
-          <li>
-            <i class="fas fa-map-marker-alt"></i> Av. Principal 123, Santa Anita
+        <h4 class="footer-heading">Enlaces Rápidos</h4>
+        <ul class="footer-links">
+          <li *ngFor="let link of quickLinks">
+            <a [routerLink]="link.route" class="footer-link">
+              <span class="link-icon">›</span>
+              {{ link.label }}
+            </a>
           </li>
-          <li><i class="fas fa-phone"></i> (01) 123-4567</li>
-          <li><i class="fas fa-envelope"></i> veterinariasantaanita.com</li>
         </ul>
       </div>
+
       <div class="footer-col">
-        <h4>Síguenos</h4>
+        <h4 class="footer-heading">Contacto</h4>
+        <ul class="contact-list">
+          <li class="contact-item" *ngFor="let contact of contactInfo">
+            <span class="contact-icon" aria-hidden="true">
+              <i [class]="contact.icon"></i>
+            </span>
+            <span>{{ contact.text }}</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="footer-col">
+        <h4 class="footer-heading">Síguenos</h4>
         <div class="social-links">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
+          <a
+            *ngFor="let social of socialLinks"
+            [href]="social.url"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="social-link"
+            [attr.aria-label]="'Visita nuestro perfil de ' + social.name"
+          >
+            <i [class]="social.icon"></i>
+          </a>
         </div>
       </div>
     </div>
+
     <div class="footer-bottom">
-      <p>
-        &copy; {{ 2025 }} Clínica Veterinaria Santa Anita. Todos los derechos
-        reservados.
+      <p class="copyright">
+        &copy; {{ currentYear }} Clínica Veterinaria Santa Anita. Todos los
+        derechos reservados.
       </p>
+      <div class="footer-legal">
+        <a routerLink="/privacidad" class="legal-link"
+          >Política de Privacidad</a
+        >
+        <span class="separator">|</span>
+        <a routerLink="/terminos" class="legal-link">Términos de Servicio</a>
+      </div>
     </div>
   </div>
 </footer>
