--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<!-- navbar -->
-<app-navbar></app-navbar>
+<!-- Mostrar navbar según login o ruta -->
+<ng-container *ngIf="!isLoginPage()">
+  <app-navbar-public *ngIf="!isLoggedIn()" />
+  <app-navbar-private *ngIf="isLoggedIn()" />
+</ng-container>
 
 <!-- index -->
 <section class="mx-5 mt-2">
