Subiendo Index con chat virtual

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,10 @@
   <router-outlet></router-outlet>
 </section>
 
+<!-- Mostrar chat-bot solo en index -->
+<router-outlet></router-outlet>
+<app-chat-bot/>
+
 <!-- <footer>Soy un footer</footer> -->
 <app-footer></app-footer>
+
